--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Micro Projects</title>
 </head>
 <body>
+    <div class="mainContainer">
     <header>
         <h1>Micro Projects Collection</h1>
     </header>
@@ -27,5 +28,6 @@
             <li class="categories"><a href="#">Virtual Applications</a></li>
         </ul>
     </main>
+    </div>
 </body>
 </html>
