--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <ul class="container">
-            <li class="categories"><a href="#">Mockups</a></li>
+            <li class="categories"><a href="subfolders/mockups.html" target="_blank">Mockups</a></li>
             <li class="categories"><a href="#">Navigation Bars</a></li>
             <li class="categories"><a href="#">Forms</a></li>
             <li class="categories"><a href="#">Search Bars</a></li>
